<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">antox</string>

    <!-- Activity titles -->
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Navigation / Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="add_friend">Add Friend</string>
    <string name="join_group">Join Group</string>
    <string name="search_friend">Search</string>

    <!-- Main Activity -->
    <string name="main_avatar">Avatar</string>
    <string name="main_username">Username</string>
    <string name="main_status">Status</string>
    <string name="icon_description">Connection Status</string>

    <!--  Chat Activity -->
    <string name="chat_enter_message">enter your message</string>
    <string name="chat_button">send</string>
    
    
    <!-- Welcome Activity -->
    <string name="welcome_string">Welcome to Antox</string>
    <string name="about_string">This client is still in pre-alpha.</string>
    <string name="getstarted_string">To get started, enter your desired name and either add your own DHT details or leave as default</string>
    <string name="developer_string">Developed by astonex\nirc.freednode.org#tox-dev</string>

    <!-- Settings Activity -->
    <string name="settings_user_key">Your User Key: abcdef</string>
    <string name="settings_name_hint">enter your name</string>
    <string name="settings_note_hint">enter your personal note</string>
    <string name="settings_status_hint">enter your status</string>
    <string name="settings_dht_ip">IP address of a bootstrap (ex: 192.254.75.98)</string>
    <string name="settings_dht_port">Port address of a bootstrap (ex: 33445)</string>
    <string name="settings_dht_key">Public Key address of a bootstrap (ex: FE3914F4616E227F29B2103450D6B55A836AD4BD23F97144E2C4ABE8D504FE1B)</string>
    <string name="settings_button">Update Settings</string>
    <string name="settings_updated">Settings have been updated</string>
    <string name="settings_dht_spinner_title">Select a DHT node</string>
    <string name="settings_radio_dht_pre">Use a default DHT node (recommended)</string>
    <string name="settings_radio_dht_self">Enter your own DHT node settings</string>

    <!-- Add Friend Activity -->
    <string name="addfriend_friend_key">enter your friends public key</string>
    <string name="addfriend_friend_message">optional message to send with request</string>
    <string name="addfriend_button">Add Friend</string>
    <string name="title_activity_chat">Chat Activity</string>
    <string name="hello_world">Hello world!</string>

    <!--  Misc -->
    
</resources>
