<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/settings_dht_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_dht_ip"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/settings_dht_port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_dht_port"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/settings_dht_key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_dht_key"
        android:textSize="15sp" />

</LinearLayout>