<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
   <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
       <TextView 
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:layout_marginBottom="400dp"
           android:textSize="30sp"
           android:text="@string/welcome_string"
        />
       
       <TextView
       	   android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:layout_marginBottom="200dp"
           android:textSize="20sp"
           android:text="@string/about_string"
       />
       
       <TextView
       	   android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:textSize="15sp"
           android:text="@string/getstarted_string"
       />
       
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:layout_marginTop="400dp"
           android:textSize="12sp"
           android:text="@string/developer_string"
       />
    </FrameLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>